# listings

./: README.md  readme.md
calculon/: compute.js  literals.js
calculus/: compute.js  literals.js
cybernetex/: .gitignore  configurations.json  main.tex
cybernetex/inc/: index.tex
cybernetex/tex/: 0.2-readme.tex  0.3-license.tex  index.tex
latex/: license  main.tex  make.py  pyproject.toml  readme.md
tex/: .gitignore  main.tex  make.py  pyproject.toml  readme.md  setup.json
tex/inc/: 0.1-summary.tex  frames.tex  titlepage.tex
tex/ppt/: main.tex
tex/preamble/: index.tex
tex/preamble/spec/: listings.tex
