[tool.poetry]
name = 'cybernetex'
version = '0.0.1'
description = "LaTeX document compilation script (console packet)"
authors = ["Tursky S.V. <tursky.sv@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = '^3.11.6'

[tool.poetry.dev-dependencies]
black = '^23.11.0'
pylint = '^3.0.2'

[tool.black]
line-length = 88
skip-string-normalization = false